# concrete_mathematics

./: .gitignore  pyproject.toml
code/ch1/: problem_2.py  problem_3.py
docs/source/: ch1.rst  conf.py  index.rst
